# Kainote

./: .gitignore  .gitmodules  CMakeLists.txt  Kainote.sln  README.md
.github/scripts/: package-linux.sh  package-windows.ps1  setup-windows-deps.ps1
.github/workflows/: build-and-package.yml
AutoSending/AutoSending/: AutoSending.cpp
AvisynthCore/: AvisynthCore.vcxproj
Kainote/: ..\Thirdparty\ffms2\include\ffms.h  AudioBox.cpp  AudioBox.h  AudioDeviceEnumeration.cpp  AudioDeviceEnumeration.h  AudioDisplay.cpp  AudioDisplay.h  AudioPlayerDSound.cpp  AudioPlayerDSound.h  AudioSpectrum.cpp  AudioSpectrum.h  Audiobox.h  AutoSaveOpen.cpp  AutoSaveOpen.h  AutoSavesRemoving.cpp  AutoSavesRemoving.h  Automation.cpp  Automation.h  AutomationDialog.cpp  AutomationDialog.h  AutomationDummyLoader.cpp  AutomationDummyLoader.h  AutomationFileSystem.cpp  AutomationHotkeysDialog.cpp  AutomationHotkeysDialog.h  AutomationProgress.cpp  AutomationProgress.h  AutomationScriptReader.cpp  AutomationScriptReader.h  AutomationToFile.cpp  AutomationToFile.h  AutomationUtils.cpp  AutomationUtils.h  BidiConversion.cpp  BidiConversion.h  BitmapButton.cpp  BitmapButton.h  ColorPicker.cpp  ColorPicker.h  ColorSpace.h  (+261 more)
Kainote/GFFT/: AssocVector.h  GFFT.cpp  GFFT.h
Kainote/wx/msw/: popupwin.h  private.h  winundef.h
Locale/: de.mo  de.po  en.mo  en.po  es.mo  es.po  id.mo  id.po  it.mo  it.po  ko_KR.mo  ko_KR.po  ms.mo  ms.po  nb_NO.mo  nb_NO.po  pt.mo  pt.po  pt_BR.mo  pt_BR.po  ru.mo  ru.po  ta.mo  ta.po  template.pot  th_TH.mo  th_TH.po  zh_Hans.mo  zh_Hans.po
Updater/: Updater.sln
Updater/Updater/: Downloader.cpp  Downloader.h  Updater.vcxproj  Updater.vcxproj.filters  UpdaterMain.cpp
cmake/: CopyLocaleCatalogs.cmake  CopyRuntimeDependencies.cmake
